--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://142.93.211.147:8080/api/v1
-REACT_APP_BASE_URL=http://142.93.211.147:8080
+REACT_APP_API_URL=http://localhost:8000/api/v1
+REACT_APP_BASE_URL=http://localhost:8000
