--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://admin.ticketingsystem.local/api/v1
-REACT_APP_BASE_URL=http://admin.ticketingsystem.local
+REACT_APP_API_URL=http://142.93.211.147:8080/api/v1
+REACT_APP_BASE_URL=http://142.93.211.147:8080
