--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-dropdown-input": "^0.1.11",
     "react-minimal-pie-chart": "^8.2.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "react-select-2": "^2.0.11",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
