--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.6.0",
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
