Support Variable to Co-Admin

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,2 @@
-REACT_APP_API_URL=http://139.59.60.90/api/v1
-REACT_APP_BASE_URL=http://139.59.60.90
-#REACT_APP_API_URL=http://139.59.60.90/api/v1
-#REACT_APP_BASE_URL=http://139.59.60.90
+REACT_APP_API_URL=https://admin.ticketingsystem.local/api/v1
+REACT_APP_BASE_URL=https://admin.ticketingsystem.local
